@@ -1,3 +1,12 @@
+2017-06-22  Jakub Jelinek  <jakub@redhat.com>
+
+	Backported from mainline
+	2017-06-21  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/81130
+	* gimplify.c (omp_add_variable): Don't force GOVD_SEEN for types
+	with ctors/dtors if GOVD_SHARED is set.
+
 2017-06-22  Martin Liska  <mliska@suse.cz>
 
 	Backport from mainline
